--- a/package.json
+++ b/package.json
@@ -10,21 +10,37 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^18.0.1",
+    "@react-native-async-storage/async-storage": "1.17.11",
+    "@reduxjs/toolkit": "^1.9.5",
     "@types/react-native": "^0.72.2",
     "babel-plugin-module-resolver": "^5.0.0",
+    "eslint": "^8.47.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "expo": "~48.0.18",
+    "expo-localization": "~14.1.1",
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
+    "intl": "^1.2.5",
+    "moment": "^2.29.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.45.2",
+    "react-intl": "^6.4.4",
     "react-native": "0.71.8",
     "react-native-svg": "13.4.0",
     "react-native-web": "~0.18.10",
-    "react-router-native": "^6.14.1"
+    "react-redux": "^8.1.2",
+    "react-router-native": "^6.14.1",
+    "redux": "^4.2.1",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.0.14",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-react-native": "^4.0.0",
+    "metro": "^0.77.0",
     "typescript": "^4.9.4"
   },
   "private": true
