--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-react-hooks": "^4.6.0",
     "expo": "~48.0.18",
+    "expo-document-picker": "~11.2.2",
     "expo-localization": "~14.1.1",
+    "expo-media-library": "~15.2.3",
+    "expo-permissions": "~14.1.1",
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
     "intl": "^1.2.5",
