--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@expo/webpack-config": "^18.0.1",
     "@react-native-async-storage/async-storage": "1.17.11",
     "@reduxjs/toolkit": "^1.9.5",
+    "@shopify/flash-list": "1.4.0",
     "@types/react-native": "^0.72.2",
     "babel-plugin-module-resolver": "^5.0.0",
     "eslint": "^8.47.0",
