--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wallet-react-native",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start -m tunnel",
@@ -20,6 +20,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "expo": "~48.0.18",
     "expo-document-picker": "~11.2.2",
+    "expo-linear-gradient": "~12.1.2",
     "expo-localization": "~14.1.1",
     "expo-media-library": "~15.2.3",
     "expo-navigation-bar": "~2.1.1",
@@ -33,13 +34,15 @@
     "react-hook-form": "^7.45.2",
     "react-intl": "^6.4.4",
     "react-native": "0.71.13",
+    "react-native-color-picker": "^0.6.0",
     "react-native-modal": "^13.0.1",
     "react-native-svg": "13.4.0",
     "react-native-web": "~0.18.10",
     "react-redux": "^8.1.2",
     "react-router-native": "^6.14.1",
     "redux": "^4.2.1",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "@react-native-community/slider": "4.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
