--- a/package.json
+++ b/package.json
@@ -6,51 +6,51 @@
     "start": "expo start -m tunnel",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "build-android": "eas build -p android --profile preview"
   },
   "dependencies": {
-    "@expo/webpack-config": "^18.0.1",
-    "@react-native-async-storage/async-storage": "1.17.11",
+    "@expo/webpack-config": "^19.0.1",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/slider": "4.5.5",
     "@reduxjs/toolkit": "^1.9.5",
-    "@shopify/flash-list": "1.4.0",
-    "@types/react-native": "^0.72.2",
+    "@shopify/flash-list": "1.7.3",
     "babel-plugin-module-resolver": "^5.0.0",
     "eslint": "^8.47.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "expo": "~48.0.18",
-    "expo-document-picker": "~11.2.2",
-    "expo-linear-gradient": "~12.1.2",
-    "expo-localization": "~14.1.1",
-    "expo-media-library": "~15.2.3",
-    "expo-navigation-bar": "~2.1.1",
+    "expo": "~52.0.35",
+    "expo-document-picker": "~13.0.3",
+    "expo-linear-gradient": "~14.0.2",
+    "expo-localization": "~16.0.1",
+    "expo-media-library": "~17.0.6",
+    "expo-navigation-bar": "~4.0.8",
     "expo-permissions": "~14.1.1",
-    "expo-splash-screen": "~0.18.2",
-    "expo-status-bar": "~1.4.4",
+    "expo-splash-screen": "~0.29.22",
+    "expo-status-bar": "~2.0.1",
     "intl": "^1.2.5",
     "moment": "^2.29.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-hook-form": "^7.45.2",
     "react-intl": "^6.4.4",
-    "react-native": "0.71.13",
+    "react-native": "0.76.7",
     "react-native-color-picker": "^0.6.0",
     "react-native-modal": "^13.0.1",
-    "react-native-svg": "13.4.0",
-    "react-native-web": "~0.18.10",
+    "react-native-svg": "15.8.0",
+    "react-native-web": "~0.19.13",
     "react-redux": "^8.1.2",
     "react-router-native": "^6.14.1",
     "redux": "^4.2.1",
-    "redux-persist": "^6.0.0",
-    "@react-native-community/slider": "4.4.2"
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~18.0.14",
+    "@types/react": "~18.3.12",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-react-native": "^4.0.0",
-    "metro": "^0.77.0",
-    "typescript": "^4.9.4"
+    "metro": "^0.81.0",
+    "typescript": "^5.3.3"
   },
   "private": true
 }
